--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ six = "==1.15.0"
 sqlparse = "==0.3.1"
 whitenoise = "==5.2.0"
 Django = "==3.0.8"
+psycopg2 = "==2.8.5"
 
 [requires]
 python_version = "3.7"
